[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "deepdetect"
version = "0.1.0"
description = "In-process Python bindings for DeepDetect"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LGPL-3.0-or-later"}
dependencies = ["numpy>=1.23", "nvidia-ml-py>=12", "Pillow>=9", "PyYAML>=6", "rich>=13.7", "torch==2.12.0", "tqdm>=4.66"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
build = ["auditwheel>=6"]
test = ["pytest>=7"]

[project.scripts]
deepdetect = "deepdetect.cli.main:main"

[tool.scikit-build]
cmake.version = ">=3.15"
wheel.packages = ["deepdetect"]
sdist.include = [
  "CMakeLists.txt",
  "README.md",
  "deepdetect/*.py",
  "deepdetect/**/*.py",
  "deepdetect/cli/*.md",
  "deepdetect/cli/*.yaml",
  "examples/*.py",
  "scripts/*.py",
  "src/native.cpp",
  "tests/*.py",
]
sdist.exclude = [".pytest_cache", "**/__pycache__/**", "**/.pytest_cache/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
